fixed nav item spacing

--- a/css/main.css
+++ b/css/main.css
@@ -179,6 +179,19 @@ html, body {
   -webkit-box-shadow: 1px 1px 10px #000;
           box-shadow: 1px 1px 10px #000; }
 
+.navbar-light .navbar-nav .nav-link {
+  margin-left: 1rem;
+  color: #EEEEEE;
+  font-size: 1.5rem;
+  text-shadow: 1px 1px 3px #464646; }
+  @media (max-width: 992px) {
+    .navbar-light .navbar-nav .nav-link {
+      margin: 1rem 0 0 0;
+      font-size: 1.25rem; } }
+  .navbar-light .navbar-nav .nav-link:hover {
+    color: #EEEEEE;
+    opacity: 0.5; }
+
 .navbar-nav {
   margin-left: auto; }
 
@@ -190,17 +203,6 @@ html, body {
   @media (max-width: 768px) {
     .navbar-brand {
       max-width: 60%; } }
-
-.navbar-light .navbar-nav .nav-link {
-  color: #EEEEEE;
-  font-size: 1.5rem;
-  text-shadow: 1px 1px 3px #464646; }
-  @media (max-width: 1200px) {
-    .navbar-light .navbar-nav .nav-link {
-      font-size: 1.25rem; } }
-  .navbar-light .navbar-nav .nav-link:hover {
-    color: #EEEEEE;
-    opacity: 0.5; }
 
 .navbar-light .navbar-nav .nav-link.active {
   color: #EEEEEE;
