--- a/sass/partials/_header.sass
+++ b/sass/partials/_header.sass
@@ -12,6 +12,19 @@
 	background: linear-gradient(rgba(38, 153, 251, 0.7) 0%, rgba(38, 153, 251, 0.7) 100%), url('../img/pezzente-properties-beach-front-chairs-old-saybrook-connecticut.jpg') no-repeat center/cover
 	box-shadow: 1px 1px 10px #000
 
+.navbar-light .navbar-nav .nav-link 
+	margin-left: 1rem
+	color: $white
+	font-size: $base-font-size + 0.5rem
+	text-shadow: 1px 1px 3px $grey
+	@media(max-width: 992px)
+		margin: 1rem 0 0 0
+		font-size: $base-font-size + 0.25rem
+
+	&:hover
+		color: $white
+		opacity: 0.5
+
 .navbar-nav
 	margin-left: auto
 
@@ -21,18 +34,6 @@
 		max-width: 70%
 	@include responsive(xs)
 		max-width: 60%
-
-.navbar-light .navbar-nav .nav-link 
-	color: $white
-	font-size: $base-font-size + 0.5rem
-	text-shadow: 1px 1px 3px $grey
-	@include responsive(sm)
-		font-size: $base-font-size + 0.25rem
-
-	&:hover
-		color: $white
-		opacity: 0.5
-
 
 .navbar-light .navbar-nav .nav-link.active
 	color: $white
